# meson

./: run_unittests.py
.github/workflows/: os_comp.yml
docs/markdown/: Dependencies.md  Reference-tables.md
man/: meson.1
mesonbuild/: build.py  envconfig.py  environment.py  mesonmain.py  mlog.py
mesonbuild/backend/: backends.py  ninjabackend.py
mesonbuild/compilers/: c.py  cuda.py  detect.py  rust.py
mesonbuild/compilers/mixins/: clike.py
mesonbuild/dependencies/: __init__.py  blas_lapack.py  numpy.py  python.py
mesonbuild/interpreter/: interpreter.py
mesonbuild/linkers/: detect.py  linkers.py
mesonbuild/modules/: python.py
mesonbuild/scripts/: python_info.py
test cases/cython/1 basic/: meson.build
test cases/cython/2 generated sources/: meson.build
test cases/cython/3 cython_args/: meson.build
test cases/cython/4 override_options/: meson.build
test cases/frameworks/36 blas lapack/: cblas_lapack.c  meson.build
test cases/frameworks/38 openblas/: cblas_lapack.c  cblas_lapack.h  meson.build
test cases/unit/94 custominc/: meson.build
unittests/: allplatformstests.py  platformagnostictests.py  windowstests.py
